--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="reipce_ingerdients_head_title">Ingredients</string>
     <string name="recipe_video_url">Recipe Steps Video URL</string>
     <string name="recipe_video_step_instruction">Recipe Video Step Instruction</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 
 
 </resources>
