--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="recipe_video_step_instruction">Recipe Video Step Instruction</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
+    <string name="widget_text">Open the App to view the widget cotents</string>
 
 
 </resources>
